Add delete , get single post , get all posts , update methods to the project
